Fix overflow

--- a/css/home.css
+++ b/css/home.css
@@ -3,6 +3,7 @@ body {
 }
 .columns {
     white-space: nowrap;
+    overflow: hidden;
 }
 .column {
     white-space: normal;
